# CSI-cobotics

./: LICENSE  README.md
ROS/: ROSInstall.bash
ROS/.packages/cobotics/cobotics/: package.xml
ROS/.packages/csi/csi/: CMakeLists.txt  package.xml
ROS/.packages/csi/csi_kuka/: CMakeLists.txt  package.xml
ROS/.packages/csi/csi_ur/: CMakeLists.txt  package.xml
documents/: control_msgs
unity/: .gitignore
unity/.packages/: CSI.unitypackage  camera-controls.unitypackage  enclosure-left.unitypackage  enclosure-right.unitypackage  ip-camera.fbx  ip-camera.unitypackage  kinect-azure.unitypackage  kinect-xbox-360-version-one.unitypackage  kinect-xbox-360-version-two.fbx  kinect-xbox-360-version-two.unitypackage  kinect-xbox-one-version-two.unitypackage  spot-welder.unitypackage  stand.unitypackage  ur10.unitypackage  ur3.unitypackage  ur5.unitypackage
unity/.scripts/: InspectionMovement.cs  InspectionSelection.cs  MultiCameraController.cs
unity/User/: UserCamera.cs  UserFocus.cs
unity/demo/: .gitignore
unity/demo/Assets/Materials/: Orange.mat
unity/demo/ProjectSettings/: ProjectSettings.asset  TagManager.asset
unity/dev-project/Assets/: WSATestCertificate.pfx
unity/dev-project/ProjectSettings/: ProjectSettings.asset  TagManager.asset
unity/dev-simple/ProjectSettings/: ProjectSettings.asset
unity/environment_demo/: .gitignore
unity/environment_demo/ProjectSettings/: ProjectSettings.asset
unity/rosbridge_test/: .gitignore
unity/rosbridge_test/Assets/: RobotScene.unity
unity/rosbridge_test/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+343 files in other folders)
